; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/ntpdc/extr_ntpdc.c_growpktdata.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/ntpdc/extr_ntpdc.c_growpktdata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pktdatasize = common dso_local global i64 0, align 8
@INCDATASIZE = common dso_local global i64 0, align 8
@pktdata = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @growpktdata to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @growpktdata() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* @pktdatasize, align 8
  store i64 %2, i64* %1, align 8
  %3 = load i64, i64* @INCDATASIZE, align 8
  %4 = load i64, i64* @pktdatasize, align 8
  %5 = add nsw i64 %4, %3
  store i64 %5, i64* @pktdatasize, align 8
  %6 = load i32, i32* @pktdata, align 4
  %7 = load i64, i64* @pktdatasize, align 8
  %8 = load i64, i64* %1, align 8
  %9 = call i32 @erealloc_zero(i32 %6, i64 %7, i64 %8)
  store i32 %9, i32* @pktdata, align 4
  ret void
}

declare dso_local i32 @erealloc_zero(i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
